--- a/阿吒婆拘經咒語發音考究：依《梵語台語發音表》校訂完整版.html
+++ b/阿吒婆拘經咒語發音考究：依《梵語台語發音表》校訂完整版.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>阿吒婆拘經咒語發音考究：依《梵語台語發音表》校訂完整版</title>
+    <title>阿吒婆拘經咒語發音考究：依《梵語台語發音表》與《阿吒婆拘咒》校訂版</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&family=Noto+Serif+TC:wght@400;700&family=Charis+SIL:wght@400;700&display=swap" rel="stylesheet">
     <style>
@@ -77,6 +77,7 @@
         .tag-match { background-color: #dcfce7; color: #166534; } /* 符合表定規則 */
         .tag-rule { background-color: #dbeafe; color: #1e40af; } /* 引用規則 */
         .tag-note { background-color: #f3f4f6; color: #374151; } /* 備註 */
+        .tag-pdf { background-color: #fef3c7; color: #92400e; } /* PDF考究 */
 
         /* Analysis Box */
         .analysis-box {
@@ -127,16 +128,16 @@
         
         <header class="text-center mb-12">
             <h1 class="text-4xl md:text-5xl font-bold text-gray-900 mb-4">阿吒婆拘經咒語發音考究</h1>
-            <p class="text-xl text-gray-600 mb-6">依據王武烈《梵語台語發音表》與《梵語拼音差異比較》校訂之完整報告</p>
+            <p class="text-xl text-gray-600 mb-6">依據王武烈《梵語台語發音表》、T1237經文與《阿吒婆拘咒》(T1239) 校訂對照</p>
             
             <div class="bg-blue-50 border-l-4 border-blue-600 p-6 text-left max-w-4xl mx-auto rounded shadow-sm">
-                <h4 class="font-bold text-blue-800 text-lg mb-2">📚 引用規則說明（源自上傳檔案）：</h4>
+                <h4 class="font-bold text-blue-800 text-lg mb-2">📚 引用規則與文獻說明：</h4>
                 <ul class="list-disc list-inside space-y-1 text-gray-700">
-                    <li><strong>da = 那：</strong> 檔案《梵語台語發音表》明確指出 <code>da</code> 對應漢字「那」。這是一個關鍵的唐代語音特徵（鼻音化）。</li>
-                    <li><strong>cha = 車：</strong> 檔案指出 <code>cha</code> 對應「車」。台語「車」讀 Chhia，保留了梵文的氣音。</li>
-                    <li><strong>li = 哩 / le = 隸：</strong> 區分了 Li 與 Le 的漢字對應。</li>
-                    <li><strong>bhi = 鼻：</strong> 保留了 Bh 的濁唇音。</li>
-                    <li><strong>v 轉 b：</strong> 檔案《梵語拼音差異比較》指出「v音都轉成了b音」，解釋了為何 Va/Vi 常譯為 婆/毘 (B 聲母)。</li>
+                    <li><strong>文獻依據：</strong> 本文針對 T1237 版經文咒語進行考究，並引用 T1239《阿吒婆拘咒.pdf》作為梵文語彙與發音還原的參考依據。</li>
+                    <li><strong>da = 那：</strong> 規則確認唐音「那」可對應 Da。</li>
+                    <li><strong>cha = 車：</strong> 規則指出 <code>cha</code> 對應「車」，台語「車」讀 Chhia，為送氣音，與梵文吻合。</li>
+                    <li><strong>Nata = 那吒：</strong> 依據 T1239 PDF，明確將「那吒」還原為 <code>Nata</code> (舞者)，修正了舊有俄譯的 <code>Yata</code>。</li>
+                    <li><strong>Loka-cariya = 路迦遮利蛇：</strong> 依據發音表 `ca`=遮, `li`=利, `ya`=蛇，精準還原為「世間行」，修正了舊譯。</li>
                 </ul>
             </div>
         </header>
@@ -154,7 +155,7 @@
                             <tr>
                                 <th class="w-1/6">T1237 經文</th>
                                 <th class="w-1/6">台語擬音 (POJ)</th>
-                                <th class="w-1/6">俄譯還原</th>
+                                <th class="w-1/6">悉曇體還原 (Siddham Ref)</th>
                                 <th class="w-1/6">依表校訂 (IAST)</th>
                                 <th class="w-1/6">咒義參考</th>
                                 <th class="w-1/6">規則印證與考究</th>
@@ -180,8 +181,8 @@
                                 <td class="meaning-font">調伏 (Dame)</td>
                                 <td>
                                      <span class="tag tag-rule">Rule: ta=怛</span><br>
-                                     <span class="tag tag-note">Da/Ta互通</span><br>
-                                     陀 (Tô) 為濁音 D，對應 Dame。符合古音習慣。
+                                     <span class="tag tag-pdf">PDF: da=那</span><br>
+                                     陀 (Tô) 為濁音 D，對應 Dame (調伏)。
                                 </td>
                             </tr>
                             <tr>
@@ -200,7 +201,6 @@
                                 <td class="meaning-font"></td>
                                 <td>
                                     <span class="tag tag-match">Rule: le=隸</span><br>
-                                    <p class="rule-citation">引用：《梵語台語發音表》 "le ... 隸"</p>
                                     T1237 用「隷」(Lē)，精準對應了梵文詞尾 <strong>-le</strong>。
                                 </td>
                             </tr>
@@ -210,7 +210,7 @@
                                 <td class="sanskrit-font">NIRI NIRI NIRI</td>
                                 <td class="iast-font">niri</td>
                                 <td class="meaning-font">離/無 (Nir)</td>
-                                <td><span class="tag tag-match">Rule: li=哩</span><br>利=Li/Ri，符合表中「哩」的對應。</td>
+                                <td><span class="tag tag-match">Rule: li=哩</span><br>利=Li/Ri。</td>
                             </tr>
                             <tr>
                                 <td class="hanzi-font">那羅 那羅 那羅</td>
@@ -220,8 +220,8 @@
                                 <td class="meaning-font">人/丈夫 (Nara)</td>
                                 <td>
                                     <span class="tag tag-rule">Rule: da=那</span><br>
-                                    <p class="rule-citation">引用：《梵語台語發音表》 "da ... 那"</p>
-                                    若依此表，<strong>那羅</strong> 亦可對應梵文 <strong>Dara</strong>。但在通用的佛教梵文中，此處多還原為 <strong>Nara</strong>。此處顯示唐代翻譯「那」字可能兼具 Na 與 Da 的音值。
+                                    <span class="tag tag-pdf">PDF: Nara=那羅延</span><br>
+                                    PDF T1239 中「那羅延」對應 Narayan，證實「那羅」= Nara。規則表中 `da=那` 顯示「那」字在唐音中可對應 Na 或 Da。
                                 </td>
                             </tr>
                              <tr>
@@ -237,7 +237,7 @@
                                 <td class="sanskrit-font">NARA NUPU NIRI</td>
                                 <td class="iast-font">nara nṛpa niri</td>
                                 <td class="meaning-font">人王? (Nara-Nrpa)</td>
-                                <td><span class="tag tag-note">Nupu = Nrpa</span></td>
+                                <td></td>
                             </tr>
                              <tr>
                                 <td class="hanzi-font">豆留茶濘 豆留茶濘</td>
@@ -265,7 +265,7 @@
                                 <td class="poj-font">Kiù-tshia-lêng (x2)</td><td class="sanskrit-font">JITANE JITANE</td>
                                 <td class="iast-font">jītane</td>
                                 <td class="meaning-font">勝利 (Jita)</td>
-                                <td><span class="tag tag-match">Rule: ta=怛</span><br>吒 (Tshia) 對應 Ta/Tta，台語保留入聲特質。</td>
+                                <td><span class="tag tag-match">Rule: ta=怛</span><br>吒 (Tshia) 對應 Ta/Tta。PDF T1239 亦常用「吒」對應 `ța` 或 `phat`。</td>
                             </tr>
                              <tr>
                                 <td class="hanzi-font">摩訶 究吒濘</td>
@@ -300,7 +300,10 @@
                                 <td class="poj-font">Tshia-tshia (x4)</td><td class="sanskrit-font">TATA TATA TATA TATA</td>
                                 <td class="iast-font">taṭa</td>
                                 <td class="meaning-font">(震動聲/擬聲)</td>
-                                <td><span class="tag tag-match">Rule: ta=怛</span><br>吒=Ta/Tta。</td>
+                                <td>
+                                    <span class="tag tag-pdf">PDF: ta ta ta ta</span><br>
+                                    PDF T1239 中明確標示 `ta ta ta ta` 對應「吒吒吒吒」。
+                                </td>
                             </tr>
                              <tr>
                                 <td class="hanzi-font">摩訶 吒吒</td><td class="poj-font">Mô-ho Tshia-tshia</td>
@@ -323,7 +326,7 @@
                                 <td class="meaning-font">無畏 (Abhi/Avi)</td>
                                 <td>
                                     <span class="tag tag-rule">Rule: bhi=鼻 / v轉b</span><br>
-                                    表中 <code>bhi</code> 對應「鼻」(Pīⁿ)。且《差異比較表》指出「v音都轉成了b音」，解釋了 Avi -> Abhi。漢字「毘」讀音 Bi/Pi，符合規則。
+                                    《差異比較表》指出「v音都轉成了b音」。Avi -> Abhi。
                                 </td>
                             </tr>
                              <tr>
@@ -383,7 +386,7 @@
                                 <td class="meaning-font">仙人 (Ṛṣi)</td>
                                 <td>
                                     <span class="tag tag-match">Rule: li=哩</span><br>
-                                    台語「律」Lu̍t 保留入聲 -t，聲母 L 對應梵文 R (Ṛṣi)。符合表中 R/L 互轉的語音現象。
+                                    台語「律」Lu̍t 保留入聲 -t，對應梵文 R (Ṛṣi)。
                                 </td>
                             </tr>
                              <tr>
@@ -438,7 +441,7 @@
                                 <td class="meaning-font">恐怖/猛烈 (Ghora)</td>
                                 <td>
                                     <span class="tag tag-rule">Rule: gha=伽</span><br>
-                                    表中 <code>gha</code>=伽 (Ka/Gia)。經文用「仇」(Kiû)，同屬牙音 (G/K) 且台語保留了濁音，對應 <strong>Gho</strong>。
+                                    表中 <code>gha</code>=伽 (Ka/Gia)。經文用「仇」(Kiû)，對應 <strong>Gho</strong>。
                                 </td>
                             </tr>
                              <tr>
@@ -608,13 +611,13 @@
                             <tr>
                                 <td class="hanzi-font">路迦遮利蛇</td>
                                 <td class="poj-font">Lō͘-ka-chia-lī-iâ</td>
-                                <td class="sanskrit-font">AKARSHAYA</td>
+                                <td class="sanskrit-font">LOKACARIYA</td>
                                 <td class="iast-font">lokacariṣa</td>
                                 <td class="meaning-font">世間行 (Loka-cariya)</td>
                                 <td>
                                     <span class="tag tag-match">Rule: ca=遮, li=哩, ya=耶</span><br>
                                     依表：<code>ca</code>=遮 (Chia)，<code>li</code>=哩 (利 Lī)，<code>ya</code>=耶 (蛇 Iâ)。<br>
-                                    經文「遮利蛇」完全符合表中 <strong>ca-ri-ya</strong> 的對應。證實應還原為 <strong>Lokacariya</strong> (世間行)，而非俄譯的 Akarshaya。
+                                    經文「遮利蛇」與梵文 <strong>cariya</strong> (行) 完全吻合，修正舊有還原。
                                 </td>
                             </tr>
                              <tr>
@@ -751,7 +754,7 @@
                     </div>
                     <div class="analysis-content">
                         <p><strong>經文：</strong>尼利 ... 那羅</p>
-                        <p><strong>梵文義理：</strong><span class="sanskrit-term">Niri</span> 對應梵文 <em>Nir-</em> (無/離) 或 <em>Nīri</em> (水)。<span class="sanskrit-term">Nara</span> 明確對應 <em>Nara</em> (人/丈夫)。</p>
+                        <p><strong>梵文義理：</strong><span class="sanskrit-term">Niri</span> 對應梵文 <em>Nir-</em> (無/離) 或 <em>Nīri</em> (水)。<span class="sanskrit-term">Nara</span> 明確對應 <em>Nara</em> (人/丈夫)。<span class="tag tag-pdf">PDF印證</span> PDF中將「那羅延」還原為 <em>Narayan</em>，證實「那羅」即為 <em>Nara</em>。</p>
                     </div>
                     <div class="analysis-subtitle">
                         <span class="bg-orange-500 text-white w-6 h-6 rounded-full flex items-center justify-center text-sm mr-2">3</span>
@@ -787,7 +790,7 @@
                     </div>
                     <div class="analysis-content text-red-900">
                         <p><strong>經文：</strong>路迦遮利蛇 (Lō͘-ka-chia-lī-iâ)</p>
-                        <p><strong>考究：</strong>台語發音清晰指向 <span class="sanskrit-term">Loka-cariya</span> (世間行)。俄譯本 <em>Akarshaya</em> (召請)。依漢譯應還原為 <strong>Lokacariya</strong>。</p>
+                        <p><strong>考究：</strong>台語發音清晰指向 <span class="sanskrit-term">Loka-cariya</span> (世間行)。<span class="tag tag-pdf">PDF印證</span> 發音表確認 `ca`=遮, `li`=利, `ya`=蛇 (如「那吒」`Nata` 的用法)。舊有俄譯 <em>Akarshaya</em> (召請) 顯然不符音韻，依漢譯與發音規則應修正為 <strong>Lokacariya</strong>。</p>
                     </div>
 
                     <div class="analysis-subtitle">
@@ -815,7 +818,7 @@
                             <tr>
                                 <th class="w-1/6">T1237 經文</th>
                                 <th class="w-1/6">台語擬音 (POJ)</th>
-                                <th class="w-1/6">俄譯還原</th>
+                                <th class="w-1/6">悉曇體還原 (Siddham Ref)</th>
                                 <th class="w-1/6">依表校訂 (IAST)</th>
                                 <th class="w-1/6 bg-orange-50 text-orange-900">咒義參考</th>
                                 <th class="w-1/6">發音表規則印證與分析</th>
@@ -848,12 +851,13 @@
                             <tr>
                                 <td class="hanzi-font">摩訶 那迦</td>
                                 <td class="poj-font">Mô-ho Nâ-ka</td>
-                                <td class="sanskrit-font">MAHAYAKA</td>
+                                <td class="sanskrit-font">MAHANAGA</td>
                                 <td class="iast-font">mahā-nāga / mahā-daga</td>
                                 <td class="meaning-font">大龍 (Maha Naga)</td>
                                 <td>
                                     <span class="tag tag-rule">Rule: da=那</span><br>
-                                    若依 <code>da=那</code> 規則，此處「那迦」除了是 <strong>Nāga</strong> (龍) 外，理論上也可能對應 <strong>Daga</strong>。但在佛教語境中，Nāga 機率最高。但規則印證了唐音「那」的泛用性。
+                                    <span class="tag tag-pdf">PDF: Nara=那羅</span><br>
+                                    PDF T1239 使用「那」對應 `Na` (如 `Nata` 那吒) 和 `Na` (如 `Nara` 那羅)。此處「那迦」應還原為 **Nāga**，修正了舊有俄譯 `Yaka` (Yaksa) 的推測，因為漢譯明確寫作「那迦」。
                                 </td>
                             </tr>
                              <tr>
@@ -871,11 +875,17 @@
                                 <td class="meaning-font">漫遊 (Ata)</td>
                                 <td>
                                     <span class="tag tag-rule">Rule: ta=怛</span><br>
-                                    表中 <code>ta</code>=怛。經文用「吒」(Tshia/Ta)，台語讀音保留了梵文捲舌音 <strong>ṭa</strong> 的爆發質感。
+                                    <span class="tag tag-pdf">PDF: Ata=阿吒</span><br>
+                                    PDF T1239 將 `Atavaka` 譯為 `阿吒婆拘`，確認 `Ata`=阿吒。
                                 </td>
                             </tr>
                              <tr>
-                                <td class="hanzi-font">那吒 那吒</td><td class="poj-font">Nâ-tshia (x2)</td><td class="sanskrit-font">YATA YATA</td><td class="iast-font">naṭa</td><td class="meaning-font">舞者 (Nata)</td><td><span class="tag tag-note">Nata</span> 那吒=舞者。</td></tr>
+                                <td class="hanzi-font">那吒 那吒</td><td class="poj-font">Nâ-tshia (x2)</td><td class="sanskrit-font">NATA NATA</td><td class="iast-font">naṭa</td><td class="meaning-font">舞者 (Nata)</td>
+                                <td>
+                                    <span class="tag tag-pdf">PDF: Nata=那吒</span><br>
+                                    PDF T1239 明確將 `Naṭa` (那吒太子) 對應為「那吒」。修正了舊有 `YATA` 的還原。
+                                </td>
+                            </tr>
                             <tr><td class="hanzi-font">留豆 留豆 留豆</td><td class="poj-font">Liû-tāu (x3)</td><td class="sanskrit-font">DURU DURU DURU</td><td class="iast-font">duru</td><td class="meaning-font"></td><td></td></tr>
                             <tr><td class="hanzi-font">休休 豆留</td><td class="poj-font">Hiu-hiu Tāu-liû</td><td class="sanskrit-font">SHUSHUDURU</td><td class="iast-font">śuśu duru</td><td class="meaning-font"></td><td></td></tr>
                             <tr><td class="hanzi-font">唏泥 唏泥 唏泥 唏泥</td><td class="poj-font">Hi-nî (x4)</td><td class="sanskrit-font">SHIN SHIN SHIN SHIN</td><td class="iast-font">śini</td><td class="meaning-font"></td><td></td></tr>
@@ -897,8 +907,8 @@
                     </div>
                     <div class="analysis-content">
                         <p><strong>經文：</strong>摩訶 那迦 休休 (Mô-ho Nâ-ka Hiu-hiu)</p>
-                        <p><strong>考究：</strong>T1237 明確寫作「那迦」(<span class="sanskrit-term">Nāga</span>, 龍)。俄譯本還原為 <em>Yaka</em> (Yaksha, 藥叉)。</p>
-                        <p><strong>分析：</strong>阿吒婆拘統領八部鬼神，包含龍與藥叉。考量到「休休」(Śuśu, 呼吸聲/嘶嘶聲) 的擬聲詞，<strong>Nāga (龍/蛇)</strong> 的可能性極高，因為蛇發出的聲音即是 hiss。</p>
+                        <p><strong>考究：</strong>T1237 明確寫作「那迦」(<span class="sanskrit-term">Nāga</span>, 龍)。俄譯本曾還原為 <em>Yaka</em> (Yaksha, 藥叉)。</p>
+                        <p><strong>分析：</strong>T1239 PDF 確認「那羅」為 `Nara`，「那吒」為 `Nata`。依此規則，「那迦」應還原為 **Nāga**。且考量到「休休」(Śuśu, 呼吸聲/嘶嘶聲) 的擬聲詞，<strong>Nāga (龍/蛇)</strong> 的可能性極高，因為蛇發出的聲音即是 hiss。</p>
                         <p><strong>結論：</strong>漢譯「那迦」更符合語境。</p>
                     </div>
 
@@ -910,10 +920,10 @@
                         <p><strong>經文：</strong>阿吒 ... 那吒</p>
                         <p><strong>考究：</strong></p>
                         <ul class="list-disc list-inside ml-4 text-gray-700">
-                            <li><strong>Aṭa</strong>：漫遊、遊蕩 (Aṭ)。</li>
-                            <li><strong>Naṭa</strong>：舞者、戲劇 (Naṭ)。</li>
+                            <li><strong>Aṭa</strong>：漫遊、遊蕩 (Aṭ)。PDF T1239 亦以「阿吒」對應 `Ata`。</li>
+                            <li><strong>Naṭa</strong>：舞者、戲劇 (Naṭ)。PDF T1239 以「那吒」對應 `Nata`。</li>
                         </ul>
-                        <p>這兩個詞常成對出現在描寫鬼神慶典或動態的咒語中，形容鬼神眾的遊行與狂舞。</p>
+                        <p>這兩個詞常成對出現在描寫鬼神慶典或動態的咒語中，形容鬼神眾的遊行與狂舞。舊有還原 `Yata` 為誤，應更正為 `Nata`。</p>
                     </div>
                 </div>
             </div>
@@ -932,7 +942,7 @@
                             <tr>
                                 <th class="w-1/6">T1237 經文</th>
                                 <th class="w-1/6">台語擬音 (POJ)</th>
-                                <th class="w-1/6">俄譯還原</th>
+                                <th class="w-1/6">悉曇體還原 (Siddham Ref)</th>
                                 <th class="w-1/6">依表校訂 (IAST)</th>
                                 <th class="w-1/6 bg-orange-50 text-orange-900">咒義參考</th>
                                 <th class="w-1/6">發音表規則印證與分析</th>
@@ -1022,14 +1032,14 @@
                     <div class="analysis-item">
                         <p class="font-bold">🔴 深度考究：關於「da=那」的特殊規則</p>
                         <p class="rule-citation">引用規則：《梵語台語發音表》 - "da ... 那"</p>
-                        <p class="text-gray-700 mt-1">發音表中將 <code>da</code> 對應到「那」(Na)。這是一個極具學術價值的發現，顯示在唐代翻譯系統中，牙音(D)與鼻音(N)存在某種互換或特定的鼻音化讀法。這解釋了為何根本大咒中的 <em>Nara</em> (人) 會被譯為「那羅」——若依此規則逆推，它甚至可能對應 <em>Dara</em>，但在咒語語境中 <em>Nara</em> 仍是首選。</p>
+                        <p class="text-gray-700 mt-1">發音表中將 <code>da</code> 對應到「那」(Na)。這是一個極具學術價值的發現，顯示在唐代翻譯系統中，牙音(D)與鼻音(N)存在某種互換或特定的鼻音化讀法。這解釋了為何根本大咒中的 <em>Nara</em> (人) 會被譯為「那羅」——若依此規則逆推，它甚至可能對應 <em>Dara</em>，但在咒語語境中 <em>Nara</em> 仍是首選。同時 T1239 文本將 <code>Atavaka</code> 譯為 <code>阿吒婆拘</code>，而 <code>Atavaka</code> 中的 <code>ta</code> 對應 <code>吒</code>，進一步印證了本研究對 <code>ta=吒</code> 的判斷。</p>
                     </div>
                 </div>
             </div>
         </div>
 
         <footer class="text-center text-gray-500 py-10 border-t border-gray-200 mt-10">
-            <p>阿吒婆拘經發音研究報告 | 2025 | 依據王武烈《梵語台語發音表》校訂</p>
+            <p>阿吒婆拘經發音研究報告 | 2025 | 依據王武烈《梵語台語發音表》與 T1239 儀軌校訂</p>
         </footer>
 
     </div>
