--- a/Hayagriva_Sadhana.html
+++ b/Hayagriva_Sadhana.html
@@ -810,7 +810,7 @@
         </div>
         <div class="translation-box trans-text">
             <span class="label label-tib">藏轉繁中</span>
-            由於未能獲得、亦未能完全知曉……或因能力不足……於此修作之中凡我所行之事，願諸尊皆能慈悲寬恕。
+            由於未能獲得、亦未能完全知曉，或因能力不足；於此修作之中凡我所行之事，願諸尊皆能慈悲寬恕。
         </div>
 
         <div class="tibetan-text" style="margin-top:20px;">
@@ -823,7 +823,7 @@
         </div>
         <div class="translation-box trans-text">
             <span class="label label-tib">藏轉繁中</span>
-            因供品資具不足，或品質有所缺損……或由於我心愚昧無明……我所作、與我教他作的一切……願護主垂憫，悉皆寬恕。
+            因供品資具不足，或品質有所缺損，或由於我心愚昧無明；我所作、與我教他作的一切，願護主垂憫，悉皆寬恕。
         </div>
     </div>
 
